# cube

./: Cargo.toml  diagram.json
src/: display.rs  main.rs  utils.rs
